8306843: JVMTI tag map extremely slow after JDK-8292741